squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-squirrel_repo-hello.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for squirrel_repo/hello.nut
---
- Identifier: print
- LeftParenthesis
- String: Hello World!
- RightParenthesis
- Newline
