squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-squirrel_repo-matrix.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for squirrel_repo/matrix.nut
---
- Newline
- Local
- Identifier: SIZE
- Assign
- Integer: 30
- Semicolon
- Newline
- Newline
- Function
- Identifier: mkmatrix
- LeftParenthesis
- Identifier: rows
- Comma
- Identifier: cols
- RightParenthesis
- LeftCurlyBrace
- Newline
- Local
- Identifier: i
- Comma
- Identifier: j
- Comma
- Identifier: count
- Assign
- Integer: 1
- Semicolon
- Newline
- Local
- Identifier: m
- Assign
- LeftSquareBracket
- RightSquareBracket
- Semicolon
- Identifier: m
- Period
- Identifier: resize
- LeftParenthesis
- Identifier: rows
- RightParenthesis
- Semicolon
- Newline
- For
- LeftParenthesis
- Identifier: i
- Assign
- Integer: 0
- Semicolon
- Identifier: i
- LessThan
- Identifier: rows
- Semicolon
- Identifier: i
- PlusAssign
- Integer: 1
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: m
- LeftSquareBracket
- Identifier: i
- RightSquareBracket
- Assign
- LeftSquareBracket
- RightSquareBracket
- Semicolon
- Identifier: m
- LeftSquareBracket
- Identifier: i
- RightSquareBracket
- Period
- Identifier: resize
- LeftParenthesis
- Identifier: cols
- RightParenthesis
- Newline
- For
- LeftParenthesis
- Identifier: j
- Assign
- Integer: 0
- Semicolon
- Identifier: j
- LessThan
- Identifier: cols
- Semicolon
- Identifier: j
- PlusAssign
- Integer: 1
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: m
- LeftSquareBracket
- Identifier: i
- RightSquareBracket
- LeftSquareBracket
- Identifier: j
- RightSquareBracket
- Assign
- Identifier: count
- PlusAssign
- Integer: 1
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Return
- Identifier: m
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: mmult
- LeftParenthesis
- Identifier: rows
- Comma
- Identifier: cols
- Comma
- Identifier: m1
- Comma
- Identifier: m2
- Comma
- Identifier: m3
- RightParenthesis
- LeftCurlyBrace
- Newline
- Local
- Identifier: i
- Comma
- Identifier: j
- Comma
- Identifier: k
- Comma
- Identifier: val
- Semicolon
- Newline
- For
- LeftParenthesis
- Identifier: i
- Assign
- Integer: 0
- Semicolon
- Identifier: i
- LessThan
- Identifier: rows
- Semicolon
- Identifier: i
- PlusAssign
- Integer: 1
- RightParenthesis
- LeftCurlyBrace
- Newline
- For
- LeftParenthesis
- Identifier: j
- Assign
- Integer: 0
- Semicolon
- Identifier: j
- LessThan
- Identifier: cols
- Semicolon
- Identifier: j
- PlusAssign
- Integer: 1
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: val
- Assign
- Integer: 0
- Semicolon
- Newline
- For
- LeftParenthesis
- Identifier: k
- Assign
- Integer: 0
- Semicolon
- Identifier: k
- LessThan
- Identifier: cols
- Semicolon
- Identifier: k
- PlusAssign
- Integer: 1
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: val
- PlusAssign
- Identifier: m1
- LeftSquareBracket
- Identifier: i
- RightSquareBracket
- LeftSquareBracket
- Identifier: k
- RightSquareBracket
- Multiply
- Identifier: m2
- LeftSquareBracket
- Identifier: k
- RightSquareBracket
- LeftSquareBracket
- Identifier: j
- RightSquareBracket
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Identifier: m3
- LeftSquareBracket
- Identifier: i
- RightSquareBracket
- LeftSquareBracket
- Identifier: j
- RightSquareBracket
- Assign
- Identifier: val
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Return
- Identifier: m3
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Local
- Identifier: n
- Assign
- Identifier: vargv
- Period
- Identifier: len
- LeftParenthesis
- RightParenthesis
- DoesNotEqual
- Integer: 0
- QuestionMark
- Identifier: vargv
- LeftSquareBracket
- Integer: 0
- RightSquareBracket
- Period
- Identifier: tointeger
- LeftParenthesis
- RightParenthesis
- Colon
- Integer: 1
- Newline
- Newline
- Local
- Identifier: m1
- Assign
- Identifier: mkmatrix
- LeftParenthesis
- Identifier: SIZE
- Comma
- Identifier: SIZE
- RightParenthesis
- Semicolon
- Newline
- Local
- Identifier: m2
- Assign
- Identifier: mkmatrix
- LeftParenthesis
- Identifier: SIZE
- Comma
- Identifier: SIZE
- RightParenthesis
- Semicolon
- Newline
- Local
- Identifier: mm
- Assign
- Identifier: mkmatrix
- LeftParenthesis
- Identifier: SIZE
- Comma
- Identifier: SIZE
- RightParenthesis
- Semicolon
- Newline
- Newline
- For
- LeftParenthesis
- Local
- Identifier: i
- Assign
- Integer: 0
- Semicolon
- Identifier: i
- LessThan
- Identifier: n
- Semicolon
- Identifier: i
- PlusAssign
- Integer: 1
- RightParenthesis
- LeftCurlyBrace
- Newline
- Identifier: mmult
- LeftParenthesis
- Identifier: SIZE
- Comma
- Identifier: SIZE
- Comma
- Identifier: m1
- Comma
- Identifier: m2
- Comma
- Identifier: mm
- RightParenthesis
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: mm
- LeftSquareBracket
- Integer: 0
- RightSquareBracket
- LeftSquareBracket
- Integer: 0
- RightSquareBracket
- Plus
- String: " "
- Plus
- Identifier: mm
- LeftSquareBracket
- Integer: 2
- RightSquareBracket
- LeftSquareBracket
- Integer: 3
- RightSquareBracket
- Plus
- String: " "
- Plus
- Identifier: mm
- LeftSquareBracket
- Integer: 3
- RightSquareBracket
- LeftSquareBracket
- Integer: 2
- RightSquareBracket
- Plus
- String: " "
- Plus
- Identifier: mm
- LeftSquareBracket
- Integer: 4
- RightSquareBracket
- LeftSquareBracket
- Integer: 4
- RightSquareBracket
- RightParenthesis
- Semicolon
- Newline
