squirrel_lang/src/snapshots/squirrel_lang__lexer__tests__lexer-squirrel_repo-metamethods.nut.snap
---
source: squirrel_lang/src/lexer.rs
expression: Lexer test for squirrel_repo/metamethods.nut
---
- Newline
- Local
- Identifier: base_vec
- Assign
- LeftCurlyBrace
- Newline
- Function
- Identifier: _add
- LeftParenthesis
- Identifier: n
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Return
- LeftCurlyBrace
- Newline
- Identifier: x
- Assign
- Identifier: x
- Plus
- Identifier: n
- Period
- Identifier: x
- Comma
- Newline
- Identifier: y
- Assign
- Identifier: y
- Plus
- Identifier: n
- Period
- Identifier: y
- Comma
- Newline
- Identifier: z
- Assign
- Identifier: z
- Plus
- Identifier: n
- Period
- Identifier: z
- Comma
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Function
- Identifier: _sub
- LeftParenthesis
- Identifier: n
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Return
- LeftCurlyBrace
- Newline
- Identifier: x
- Assign
- Identifier: x
- Minus
- Identifier: n
- Period
- Identifier: x
- Comma
- Newline
- Identifier: y
- Assign
- Identifier: y
- Minus
- Identifier: n
- Period
- Identifier: y
- Comma
- Newline
- Identifier: z
- Assign
- Identifier: z
- Minus
- Identifier: n
- Period
- Identifier: z
- Comma
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Function
- Identifier: _div
- LeftParenthesis
- Identifier: n
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Return
- LeftCurlyBrace
- Newline
- Identifier: x
- Assign
- Identifier: x
- Divide
- Identifier: n
- Period
- Identifier: x
- Comma
- Newline
- Identifier: y
- Assign
- Identifier: y
- Divide
- Identifier: n
- Period
- Identifier: y
- Comma
- Newline
- Identifier: z
- Assign
- Identifier: z
- Divide
- Identifier: n
- Period
- Identifier: z
- Comma
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Function
- Identifier: _mul
- LeftParenthesis
- Identifier: n
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Return
- LeftCurlyBrace
- Newline
- Identifier: x
- Assign
- Identifier: x
- Multiply
- Identifier: n
- Period
- Identifier: x
- Comma
- Newline
- Identifier: y
- Assign
- Identifier: y
- Multiply
- Identifier: n
- Period
- Identifier: y
- Comma
- Newline
- Identifier: z
- Assign
- Identifier: z
- Multiply
- Identifier: n
- Period
- Identifier: z
- Comma
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Function
- Identifier: _modulo
- LeftParenthesis
- Identifier: n
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Return
- LeftCurlyBrace
- Newline
- Identifier: x
- Assign
- Identifier: x
- Modulus
- Identifier: n
- Comma
- Newline
- Identifier: y
- Assign
- Identifier: y
- Modulus
- Identifier: n
- Comma
- Newline
- Identifier: z
- Assign
- Identifier: z
- Modulus
- Identifier: n
- Comma
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Function
- Identifier: _typeof
- LeftParenthesis
- RightParenthesis
- LeftCurlyBrace
- Return
- String: vector
- Semicolon
- RightCurlyBrace
- Newline
- Function
- Identifier: _get
- LeftParenthesis
- Identifier: key
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- If
- LeftParenthesis
- Identifier: key
- Equals
- Integer: 100
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Return
- Identifier: test_field
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Comma
- Newline
- Function
- Identifier: _set
- LeftParenthesis
- Identifier: key
- Comma
- Identifier: val
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "key = "
- Plus
- Identifier: key
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- DoubleColon
- Identifier: print
- LeftParenthesis
- String: "val = "
- Plus
- Identifier: val
- Plus
- String: "\n"
- RightParenthesis
- Newline
- If
- LeftParenthesis
- Identifier: key
- Equals
- Integer: 100
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Return
- Identifier: test_field
- Assign
- Identifier: val
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- RightCurlyBrace
- Newline
- Identifier: test_field
- Assign
- String: nothing
- Newline
- RightCurlyBrace
- Newline
- Newline
- Function
- Identifier: vector
- LeftParenthesis
- Identifier: _x
- Comma
- Identifier: _y
- Comma
- Identifier: _z
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Return
- LeftCurlyBrace
- Identifier: x
- Assign
- Identifier: _x
- Comma
- Identifier: y
- Assign
- Identifier: _y
- Comma
- Identifier: z
- Assign
- Identifier: _z
- RightCurlyBrace
- Period
- Identifier: setdelegate
- LeftParenthesis
- Identifier: base_vec
- RightParenthesis
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Newline
- Local
- Identifier: v1
- Assign
- Identifier: vector
- LeftParenthesis
- Number: 1.5
- Comma
- Number: 2.5
- Comma
- Number: 3.5
- RightParenthesis
- Semicolon
- Newline
- Local
- Identifier: v2
- Assign
- Identifier: vector
- LeftParenthesis
- Number: 1.5
- Comma
- Number: 2.5
- Comma
- Number: 3.5
- RightParenthesis
- Semicolon
- Newline
- Newline
- Local
- Identifier: r
- Assign
- Identifier: v1
- Plus
- Identifier: v2
- Semicolon
- Newline
- Newline
- Newline
- ForEach
- LeftParenthesis
- Identifier: i
- Comma
- Identifier: val
- In
- Identifier: r
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: i
- Plus
- String: " = "
- Plus
- Identifier: val
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: r
- Assign
- Identifier: v1
- Multiply
- Identifier: v2
- Semicolon
- Newline
- Newline
- ForEach
- LeftParenthesis
- Identifier: i
- Comma
- Identifier: val
- In
- Identifier: r
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: i
- Plus
- String: " = "
- Plus
- Identifier: val
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: r
- Assign
- Identifier: v1
- Divide
- Identifier: v2
- Semicolon
- Newline
- Newline
- ForEach
- LeftParenthesis
- Identifier: i
- Comma
- Identifier: val
- In
- Identifier: r
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: i
- Plus
- String: " = "
- Plus
- Identifier: val
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: r
- Assign
- Identifier: v1
- Minus
- Identifier: v2
- Semicolon
- Newline
- Newline
- ForEach
- LeftParenthesis
- Identifier: i
- Comma
- Identifier: val
- In
- Identifier: r
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: i
- Plus
- String: " = "
- Plus
- Identifier: val
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: r
- Assign
- Identifier: v1
- Modulus
- Integer: 2
- Semicolon
- Newline
- Newline
- ForEach
- LeftParenthesis
- Identifier: i
- Comma
- Identifier: val
- In
- Identifier: r
- RightParenthesis
- Newline
- LeftCurlyBrace
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: i
- Plus
- String: " = "
- Plus
- Identifier: val
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- RightCurlyBrace
- Newline
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: v1
- LeftSquareBracket
- Integer: 100
- RightSquareBracket
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- Identifier: v1
- LeftSquareBracket
- Integer: 100
- RightSquareBracket
- Assign
- String: set SUCCEEDED
- Semicolon
- Newline
- Identifier: print
- LeftParenthesis
- Identifier: v1
- LeftSquareBracket
- Integer: 100
- RightSquareBracket
- Plus
- String: "\n"
- RightParenthesis
- Semicolon
- Newline
- Newline
- If
- LeftParenthesis
- Typeof
- Identifier: v1
- Equals
- String: vector
- RightParenthesis
- Newline
- Identifier: print
- LeftParenthesis
- String: "<SUCCEEDED>\n"
- RightParenthesis
- Semicolon
- Newline
- Else
- Newline
- Identifier: print
- LeftParenthesis
- String: "<FAILED>\n"
- RightParenthesis
- Semicolon
- Newline
